be/src/service/impala-beeswax-server.cc
@@ -17,8 +17,6 @@
 
 #include "service/impala-server.h"
 
-#include <boost/algorithm/string/join.hpp>
-
 #include "common/logging.h"
 #include "gen-cpp/Frontend_types.h"
 #include "rpc/thrift-util.h"
@@ -36,8 +34,6 @@
 
 #include "common/names.h"
 
-using boost::adopt_lock_t;
-using boost::algorithm::join;
 using namespace apache::thrift;
 using namespace apache::hive::service::cli::thrift;
 using namespace beeswax;
@@ -120,13 +116,15 @@ void ImpalaServer::executeAndWait(QueryHandle& query_handle, const Query& query,
   }
   // block until results are ready
   request_state->Wait();
-  status = request_state->query_status();
+  {
+    lock_guard<mutex> l(*request_state->lock());
+    status = request_state->query_status();
+  }
   if (!status.ok()) {
     (void) UnregisterQuery(request_state->query_id(), false, &status);
     RaiseBeeswaxException(status.GetDetail(), SQLSTATE_GENERAL_ERROR);
   }
 
-  request_state->UpdateNonErrorQueryState(beeswax::QueryState::FINISHED);
   TUniqueIdToQueryHandle(request_state->query_id(), &query_handle);
 
   // If the input log context id is an empty string, then create a new number and
@@ -244,17 +242,18 @@ beeswax::QueryState::type ImpalaServer::get_state(const QueryHandle& handle) {
   QueryHandleToTUniqueId(handle, &query_id);
   VLOG_ROW << "get_state(): query_id=" << PrintId(query_id);
 
-  lock_guard<mutex> l(client_request_state_map_lock_);
-  ClientRequestStateMap::iterator entry = client_request_state_map_.find(query_id);
-  if (entry != client_request_state_map_.end()) {
-    return entry->second->query_state();
-  } else {
+  shared_ptr<ClientRequestState> request_state = GetClientRequestState(query_id);
+  if (UNLIKELY(request_state == nullptr)) {
     VLOG_QUERY << "ImpalaServer::get_state invalid handle";
     RaiseBeeswaxException(Substitute("Invalid query handle: $0", PrintId(query_id)),
       SQLSTATE_GENERAL_ERROR);
   }
-  // dummy to keep compiler happy
-  return beeswax::QueryState::FINISHED;
+  // Take the lock to ensure that if the client sees a query_state == EXCEPTION, it is
+  // guaranteed to see the error query_status.
+  lock_guard<mutex> l(*request_state->lock());
+  DCHECK_EQ(request_state->query_state() == beeswax::QueryState::EXCEPTION,
+      !request_state->query_status().ok());
+  return request_state->query_state();
 }
 
 void ImpalaServer::echo(string& echo_string, const string& input_string) {
@@ -285,18 +284,28 @@ void ImpalaServer::get_log(string& log, const LogContextId& context) {
     return;
   }
   stringstream error_log_ss;
-  // If the query status is !ok, include the status error message at the top of the log.
-  if (!request_state->query_status().ok()) {
-    error_log_ss << request_state->query_status().GetDetail() << "\n";
+
+  {
+    // Take the lock to ensure that if the client sees a query_state == EXCEPTION, it is
+    // guaranteed to see the error query_status.
+    lock_guard<mutex> l(*request_state->lock());
+    DCHECK_EQ(request_state->query_state() == beeswax::QueryState::EXCEPTION,
+        !request_state->query_status().ok());
+    // If the query status is !ok, include the status error message at the top of the log.
+    if (!request_state->query_status().ok()) {
+      error_log_ss << request_state->query_status().GetDetail() << "\n";
+    }
   }
 
   // Add warnings from analysis
-  error_log_ss << join(request_state->GetAnalysisWarnings(), "\n");
+  for (const string& warning : request_state->GetAnalysisWarnings()) {
+    error_log_ss << warning << "\n";
+  }
 
   // Add warnings from execution
   if (request_state->coord() != nullptr) {
-    if (!request_state->query_status().ok()) error_log_ss << "\n\n";
-    error_log_ss << request_state->coord()->GetErrorLog();
+    const std::string coord_errors = request_state->coord()->GetErrorLog();
+    if (!coord_errors.empty()) error_log_ss << coord_errors << "\n";
   }
   log = error_log_ss.str();
 }
